<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/loginactivity_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/loginactivity_title_tv"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/loginactivity_username_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/loginactivity_title_tv"
        android:layout_marginTop="20dp"
        android:text="@string/loginactivity_username_tv"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/loginactivity_username_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/loginactivity_username_tv"
        android:inputType="text"
        android:ems="10" />

    <TextView
        android:id="@+id/loginactivity_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/loginactivity_username_et"
        android:layout_marginTop="20dp"
        android:text="@string/loginactivity_password_tv"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/loginactivity_password_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/loginactivity_password_tv"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/loginactivity_login_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/loginactivity_password_et"
        android:layout_marginTop="40dp"
        android:onClick="onLoginClicked"
        android:text="@string/loginactivity_login_b" />

</RelativeLayout>